[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/floor_tile.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://HealthUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Action_-_Challenge_Fate.ogg" type="AudioStream" id=6]
[ext_resource path="res://Shaders/crt_material.tres" type="Material" id=7]
[ext_resource path="res://World/World.gd" type="Script" id=8]
[ext_resource path="res://KillCounterUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menu/Menu.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 168.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 170.92 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 291.618, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 280.939, 10 )

[node name="World" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -8.5, 7.5 )
texture = ExtResource( 1 )
offset = Vector2( 160, 90 )
region_enabled = true
region_rect = Rect2( 0, 0, 544, 320 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 159.507, 87.6052 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="EnemySpawner" parent="YSort" instance=ExtResource( 3 )]

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 159.507, 87.6052 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="TopLeft" parent="Camera2D/Node" index="0"]
position = Vector2( -104.454, -58.4756 )

[node name="BottomRight" parent="Camera2D/Node" index="1"]
position = Vector2( 425.475, 240.317 )

[node name="HealthUIContainer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="HealthUIContainer" instance=ExtResource( 4 )]
margin_left = 6.13518
margin_top = 5.89922
margin_right = 89.1352
margin_bottom = 25.8992

[node name="KillCounterUI" parent="HealthUIContainer" instance=ExtResource( 9 )]
margin_left = 236.898
margin_top = 7.57662
margin_right = 308.898
margin_bottom = 23.5766

[node name="Menu" parent="HealthUIContainer" instance=ExtResource( 10 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="CRTFilter" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CRTFilter"]
material = ExtResource( 7 )
margin_top = -1.0
margin_right = 321.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoundBox" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundBox"]
position = Vector2( -116.798, 92.1039 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoundBox"]
position = Vector2( 437.827, 87.432 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BoundBox"]
position = Vector2( 156.176, -70.7465 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BoundBox"]
position = Vector2( 158.846, 252.952 )
shape = SubResource( 4 )
[connection signal="player_died" from="YSort/Player" to="." method="_on_Player_player_died"]
[connection signal="game_start" from="HealthUIContainer/Menu" to="." method="_on_Menu_game_start"]

[editable path="YSort/EnemySpawner"]

[editable path="Camera2D"]
